Thu Dec 18 09:25:13 CET 2014
xap/mozilla-firefox-langpack-31.3.0-i486-1_microlinux.txz: Added.
xap/mozilla-thunderbird-langpack-31.3.0-i486-1_microlinux.txz: Added.
l/libgnomecanvas-2.30.3-i486-1_microlinux.txz: Added.
x/gdm-2.20.11-i486-1_microlinux.txz: Added.
xap/libreoffice-4.2.8-i586-1_microlinux.txz: Added.
xap/libreoffice-langpack-fr-4.2.8-i586-1_microlinux.txz: Added.
xap/libreoffice-langpack-de-4.2.8-i586-1_microlinux.txz: Added.
x/google-droid-fonts-20100409-noarch-1_microlinux.txz: Downgraded.
	Droid Sans is missing in the new release. Go figure.
ap/sbopkg-0.37.0-noarch-1_microlinux.txz: Added.
ap/hplip-3.14.10-i486-1_microlinux.txz: Upgraded.
  Support for recent HP printers.
ap/recode-3.7_beta2-i486-1_microlinux.txz: Added.
ap/unrar-5.0.14-i486-1_microlinux.txz: Added.
ap/cdlabelgen-4.3.0-noarch-1_microlinux.txz: Added.
ap/p7zip-9.20.1-i486-1_microlinux.txz: Added.
+--------------------------+
Wed Dec 17 10:48:25 CET 2014
profile/user-settings-console-1.0-noarch-1_microlinux.txz: Added.
xfce/aero-1.0-noarch-1_microlinux.txz: Added.
xfce/gtk-engines-2.20.2-i486-1_microlinux.txz: Added.
xfce/clearlooks-phenix-theme-20131228-noarch-1_microlinux.txz: Added.
xfce/xfwm4-theme-axe-1.0-noarch-1_microlinux.txz: Added.
xfce/elementary-xfce-20141217-noarch-1_microlinux.txz: Added.
xfce/microlinux-wallpapers-1.0-noarch-1_microlinux.txz: Added.
x/eurostile-fonts-1.0-noarch-1_microlinux.txz: Added.
x/google-droid-fonts-20141010-noarch-1_microlinux.txz: Added.
x/webcore-fonts-3.0-noarch-1_microlinux.txz: Added.
+--------------------------+