@@ -21,5 +21,6 @@ ap/recode
 ap/unrar
 ap/cdlabelgen
 ap/p7zip
+d/jdk
 
 
