@@ -1,0 +1,4 @@
+#!/bin/csh
+setenv JAVA_HOME /usr/lib/java
+setenv MANPATH ${MANPATH}:${JAVA_HOME}/man
+setenv PATH ${PATH}:${JAVA_HOME}/bin:${JAVA_HOME}/jre/bin
