@@ -1,0 +1,12 @@
+     |-----handy-ruler------------------------------------------------------|
+jdk: Java(TM) 2 Platform Standard Edition Development Kit.
+jdk:
+jdk: The Java 2 SDK software includes tools for developing, testing, and
+jdk: running programs written in the Java programming language.  This
+jdk: package contains everything you need to run Java(TM).
+jdk:
+jdk: 
+jdk:
+jdk:
+jdk:
+jdk: Package created by Niki Kovacs <info@microlinux.fr>
