@@ -1,0 +1,18 @@
+# HOW TO EDIT THIS FILE:
+# The "handy ruler" below makes it easier to edit a package description.  Line
+# up the first '|' above the ':' following the base package name, and the '|' on
+# the right side marks the last column you can put a character in.  You must make
+# exactly 11 lines for the formatting to be correct.  It's also customary to
+# leave one space after the ':'.
+   |-----handy-ruler------------------------------------------------------|
+jre: Java(TM) 2 Platform Standard Edition Runtime Environment.
+jre:
+jre: The J2SE(TM) Runtime Environment (JRE) is intended for software
+jre: developers and vendors to redistribute with their applications.
+jre: It contains the Java virtual machine, runtime class libraries, and
+jre: Java application launcher that are necessary to run programs written
+jre: in the Java programming language.
+jre:
+jre:
+jre:
+jre:
