@@ -1,3 +1,6 @@
+Fri Dec 19 06:38:07 CET 2014
+d/jdk-7u71-i586-1_microlinux.txz: Added.
++--------------------------+
 Thu Dec 18 09:25:13 CET 2014
 xap/mozilla-firefox-langpack-31.3.0-i486-1_microlinux.txz: Added.
 xap/mozilla-thunderbird-langpack-31.3.0-i486-1_microlinux.txz: Added.
